--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </div>
         <div class="content">
-         <h1>Welcome🙋🏽‍♀️<br><span>I am Maaza.</span></h1>
+         <h1>Welcome!<br><span>I am Maaza.</span></h1>
             <p class="par">I specialize in UX/UI design with a background in Marketing and Communications.<br> I have a passion for creating appealing and functional user experiences.</p>
             
                 <button class="cn"><a href="#">See Portfolio</a></button>
